<resources>
  <string name="app_name">PayKit Dev App</string>
  <string name="payment_type_title">Payment Type</string>
  <string name="payment_type_one_time">One-Time</string>
  <string name="payment_type_on_fine">On File</string>
  <string name="hint_amount_title">Amount in cents - Optional</string>
  <string name="hint_account_ref_title">Account Reference ID - Optional</string>
  <string name="operations_title">Operations</string>
  <string name="create_customer_btn">Create Customer</string>
  <string name="update_customer_btn">Update Customer (optional)</string>
  <string name="retrieve_existing_btn">Get Existing (optional)</string>
  <string name="hint_existing_request_id">Existing request ID</string>
  <string name="reset_sdk_btn">Reset SDK</string>
  <string name="authorize_customer_btn">Authorize Customer</string>
  <string name="results_hint">Results will display here</string>
  <string name="logo_dev_options">Dev Options</string>
  <string name="environment_staging">Staging</string>
  <string name="environment_sandbox">Sandbox</string>
  <string name="buttons_title">PayKit Buttons</string>
  <string name="title_activity_analytics_sample">AnalyticsSample</string>
  <string name="schedule_deliverable">Schedule deliverable</string>
  <string name="dispatch_deliverable">Dispatch deliverable</string>
  <string name="shutdown">Shutdown</string>
</resources>
