<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:orientation="vertical"
    >

  <Button
      android:id="@+id/createCustomerBtn"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/create_customer_btn"
      style="@style/DevAppButton"
      />

  <Button
      android:id="@+id/authorizeCustomerBtn"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/authorize_customer_btn"
      style="@style/DevAppButton"
      />

  <Button
      android:id="@+id/updateCustomerBtn"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/update_customer_btn"
      style="@style/DevAppButton"
      />

  <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:layout_margin="8dp"
      android:background="@color/cardview_shadow_start_color"
      />

  <!-- Existing Request ID -->
  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/existingReqContainer"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/hint_existing_request_id"
      >

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/existingReqField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        />

  </com.google.android.material.textfield.TextInputLayout>

  <Button
      android:id="@+id/retrieveExistingBtn"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/retrieve_existing_btn"
      style="@style/DevAppButton"
      />

  <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:layout_margin="8dp"
      android:background="@color/cardview_shadow_start_color"
      />

  <Button
      android:id="@+id/resetSdkBtn"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/reset_sdk_btn"
      style="@style/DevAppButton"
      />
</LinearLayout>
