<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingTop="20dp"
    android:paddingRight="20dp"
    android:paddingBottom="20dp">

    <Button
        android:id="@+id/scheduleBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/schedule_deliverable" />

    <Button
        android:id="@+id/dispatchBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scheduleBtn"
        android:layout_alignParentStart="true"
        android:text="@string/dispatch_deliverable" />

    <Button
        android:id="@+id/shutdownBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dispatchBtn"
        android:layout_alignParentStart="true"
        android:text="@string/shutdown" />

</RelativeLayout>
