<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="app.cash.paykit.devapp.MainActivity"
    android:orientation="vertical"
    >

  <com.google.android.material.appbar.AppBarLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      >

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/app_name"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        />

  </com.google.android.material.appbar.AppBarLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:gravity="center_horizontal"
      android:orientation="vertical"
      android:padding="16dp"
      >

    <!-- Payment type -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/payment_type_title"
        style="@style/DevAppTextTitle"
        />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggleButton"
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:layout_height="wrap_content"
        app:singleSelection="true"
        app:selectionRequired="true"
        app:checkedButton="@+id/oneTimeButton"
        >
      <Button
          style="?attr/materialButtonOutlinedStyle"
          android:id="@+id/oneTimeButton"
          android:layout_weight="1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/payment_type_one_time"
          />
      <Button
          style="?attr/materialButtonOutlinedStyle"
          android:id="@+id/onFileButton"
          android:layout_weight="1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/payment_type_on_fine"
          />

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <!-- Amount -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/amountContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/hint_amount_title"
        >

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/amountField"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="number"
          />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Account Reference ID -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/referenceContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        android:hint="@string/hint_account_ref_title"
        tools:visibility="visible"
        >

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/referenceField"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="textNoSuggestions"
          />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Operations Card -->
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:layout_marginVertical="8dp"
        android:layout_marginHorizontal="4dp"
        app:cardElevation="4dp"
        >

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="200dp"
          android:padding="8dp"
          android:orientation="vertical"
          >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/operations_title"
            style="@style/DevAppTextTitle"
            />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            >
          <include
              android:id="@+id/operations"
              layout="@layout/operations_section"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              />

        </androidx.core.widget.NestedScrollView>

      </LinearLayout>


    </com.google.android.material.card.MaterialCardView>

    <!-- Text is made copy-pasteable by setting `textIsSelectable` -->
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >
      <TextView
          android:id="@+id/statusText"
          android:layout_width="wrap_content"
          android:layout_height="match_parent"
          android:minWidth="380dp"
          android:textIsSelectable="true"
          android:padding="4dp"
          android:background="@color/cardview_shadow_start_color"
          android:textColor="@color/black"
          android:hint="@string/results_hint"
          android:textSize="14sp"
          android:layout_marginTop="6dp"
          android:scrollbars="vertical"
          />
    </HorizontalScrollView>

  </LinearLayout>


</LinearLayout>